--- a/frontend/detail.html
+++ b/frontend/detail.html
@@ -5,13 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="shortcut icon" href="/static/images/favicon.png">
-
-    <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
           crossorigin="anonymous">
-
-    <!-- JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
             integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
@@ -19,21 +15,12 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
             integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
             crossorigin="anonymous"></script>
-
-    <!-- 구글폰트 -->
+    <script src="function.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Stylish&display=swap" rel="stylesheet">
-
-
     <title>내배캠 | 질문합시다</title>
-    <!-- style -->
     <style type="text/css">
         * {
             font-family: "Stylish", sans-serif;
-        }
-
-        .comment {
-            color: blue;
-            font-weight: bold;
         }
 
         .wrap {
@@ -50,8 +37,6 @@
         }
     </style>
     <script>
-        let url = "https://m7exho74yc.execute-api.ap-northeast-2.amazonaws.com/Prod";
-
         $(document).ready(function () {
             $.ajaxSetup({
                 error: function (jqXHR, exception) {
@@ -73,24 +58,7 @@
             getArticle(getParam('idx'));
         });
 
-      function getArticle(idx) {
-            $.ajax({
-                type: "GET",
-                url: `${url}/article?idx=${idx}`,
-                data: {},
-                success: function (response) {
-                    let title = response['article']['title']
-                    let content = response['article']['content']
-                    $("#title").html(title);
-                    $("#content").html(content);
-                }
-            })
-        }
 
-        function getParam(name) {
-            var results = new RegExp('[\?&amp;]' + name + '=([^&amp;#]*)').exec(window.location.href);
-            return results[1] || 0;
-        }
     </script>
 </head>
 <body>
