--- a/frontend/header.html
+++ b/frontend/header.html
@@ -4,81 +4,9 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <script>
-        let gUrl = "https://m7exho74yc.execute-api.ap-northeast-2.amazonaws.com/Prod";
         $(document).ready(function () {
             loginCheck();
         });
-
-        function openClose() {
-            if ($("#post-box").css("display") == "block") {
-                $("#post-box").hide();
-                $("#btn-post-box").text("포스팅 박스 열기");
-            } else {
-                $("#post-url").val('');
-                $("#post-comment").val('');
-                $("#post-box").show();
-                $("#btn-post-box").text("포스팅 박스 닫기");
-            }
-        }
-
-        function openCloseLogin() {
-            $('#login-id').val('');
-            $('#login-pwd').val('');
-            $('#loginModal').modal('show');
-        }
-
-        function login() {
-            $.ajax({
-                type: "POST",
-                url: `${gUrl}/login`,
-                data: JSON.stringify({id: $("#login-id").val(), pwd: $("#login-pwd").val()}),
-                success: function (response) {
-                    localStorage.setItem('token', response['token']);
-                    alert("로그인 되었습니다!!");
-                    $('#loginModal').modal('hide');
-                    loginCheck();
-                }
-            })
-        }
-
-        function openCloseJoin() {
-            $('#joinModal').modal('show');
-        }
-
-        function join() {
-            $.ajax({
-                type: "POST",
-                url: `${gUrl}/join`,
-                data: JSON.stringify({id: $("#join-id").val(), pwd: $("#join-pwd").val()}),
-                success: function (response) {
-                    alert("로그인 해주세요!!");
-                    $('#joinModal').modal('hide');
-                }
-            })
-        }
-
-        function logout() {
-            localStorage.removeItem('token');
-            $('#btn-login').show();
-            $('#btn-logout').hide();
-            $('#btn-join').show();
-        }
-
-        function loginCheck() {
-            if (localStorage.getItem('token')) {
-                $('#btn-login').hide();
-                $('#btn-logout').show();
-                $('#btn-join').hide();
-            }
-        }
-
-        function loginCheck() {
-            if (localStorage.getItem('token')) {
-                $('#btn-login').hide();
-                $('#btn-logout').show();
-                $('#btn-join').hide();
-            }
-        }
     </script>
 </head>
 <body>
@@ -88,11 +16,28 @@
     <p class="lead">
         <button onclick="openClose()" id="btn-post-box" type="button" class="btn btn-primary">포스팅 박스 열기</button>
         <button onclick="openCloseLogin()" id="btn-login" type="button" class="btn btn-secondary">로그인</button>
+        <button onclick="openCloseLogin()" id="btn-kakao" type="button" class="btn btn-secondary">카카오</button>
         <button onclick="logout()" id="btn-logout" type="button" class="btn btn-danger" style="display:none">로그아웃
         </button>
         <button onclick="openCloseJoin()" id="btn-join" type="button" class="btn btn-success">회원가입</button>
     </p>
 </div>
+
+<div id="post-box" class="form-post" style="display:none">
+    <div>
+        <div class="form-group">
+            <label for="post-url">제목</label>
+            <input id="post-url" class="form-control" placeholder="">
+        </div>
+        <div class="form-group">
+            <label for="post-comment">간단한 내용</label>
+            <textarea id="post-comment" class="form-control" rows="2"></textarea>
+        </div>
+        <input id="post-idx" class="form-control" placeholder="" hidden>
+        <button type="button" class="btn btn-primary" onclick="postingArticle()">기사저장</button>
+    </div>
+</div>
+
 <!-- Login Modal -->
 <div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
